--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "15.4.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "typescript": "5.9.2",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
