--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:proxy": "curl http://localhost:3000/api/health",
+    "dev:direct": "NEXT_PUBLIC_USE_PROXY=false npm run dev"
   },
   "dependencies": {
     "axios": "^1.11.0",
